--- a/src/NamesOutOfAHat.Client/clientapp/package.json
+++ b/src/NamesOutOfAHat.Client/clientapp/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "uuidjs": "^4.2.9",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
