--- a/src/NamesOutOfAHat.Client/NamesOutOfAHat.Client.csproj
+++ b/src/NamesOutOfAHat.Client/NamesOutOfAHat.Client.csproj
@@ -21,6 +21,12 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NamesOutOfAHat.Interface\NamesOutOfAHat.Interface.csproj" />
+    <ProjectReference Include="..\NamesOutOfAHat.Models\NamesOutOfAHat.Models.csproj" />
+    <ProjectReference Include="..\NamesOutOfAHat.Service\NamesOutOfAHat.Service.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
