added DTOs. Map to models next

--- a/src/NamesOutOfAHat.Api/NamesOutOfAHat.Api.csproj
+++ b/src/NamesOutOfAHat.Api/NamesOutOfAHat.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NamesOutOfAHat.Dto\NamesOutOfAHat.Dto.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Interface\NamesOutOfAHat.Interface.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Models\NamesOutOfAHat.Models.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Service\NamesOutOfAHat.Service.csproj" />
