simplified things by removing interfaces of models. they were more trouble than they were worth.

--- a/src/NamesOutOfAHat.Interface/NamesOutOfAHat.Interface.csproj
+++ b/src/NamesOutOfAHat.Interface/NamesOutOfAHat.Interface.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NamesOutOfAHat.Models\NamesOutOfAHat.Models.csproj" />
+  </ItemGroup>
+
 </Project>
