--- a/src/NamesOutOfAHat.Api/NamesOutOfAHat.Api.csproj
+++ b/src/NamesOutOfAHat.Api/NamesOutOfAHat.Api.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,14 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NamesOutOfAHat.Dto\NamesOutOfAHat.Dto.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Interface\NamesOutOfAHat.Interface.csproj" />
+    <ProjectReference Include="..\NamesOutOfAHat.Map\NamesOutOfAHat.Map.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Models\NamesOutOfAHat.Models.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Service\NamesOutOfAHat.Service.csproj" />
     <ProjectReference Include="..\NamesOutOfAHat.Utility\NamesOutOfAHat.Utility.csproj" />
