--- a/src/NamesOutOfAHat.Client/NamesOutOfAHat.Client.csproj
+++ b/src/NamesOutOfAHat.Client/NamesOutOfAHat.Client.csproj
@@ -13,7 +13,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="VueCliMiddleware" Version="5.0.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+        <PackageReference Include="VueCliMiddleware" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
